# starloom

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
claude-plugin/: package.json
examples/: challenge.star  design_multi_backend_architecture.star  design_refactoring.star  design_stop_lifecycle_with_claude_opus.star  fix_from_review.star  fix_legacy_naming_until_clean.star  fix_stop_lifecycle_architecture.star  hello.star  implement_multi_backend_architecture.star  legacy_descriptions_sweep.star  parallel.star  pi_agent.star  pi_starloom_integration_research.star  review_starloom.star  simple_agent.star  split_starloom_skill_once.star
starloom/: __init__.py  _worker.py  checkpoint.py  checkpoint_events.py  client.py  cost.py  event_data.py  events.py  hooks.py  messages.py  orchestrator.py  params.py  runtime.py  serialization.py  server.py  stop.py  tokenizer.py  types.py
starloom/backend/: __init__.py  _msg_handlers.py  _stream_parser.py  dry_run.py  (+4 more)
tests/: conftest.py  test_attach_rendering.py  test_backend.py  test_builtins.py  test_checkpoint.py  test_cli_commands.py  test_cli_node.py  test_cli_session.py  test_client.py  test_cost.py  test_event_data.py  test_events.py  test_graph.py  test_hooks.py  test_internal_skill_builtin.py  test_messages.py  test_middleware.py  test_multi_backend_invariants.py  test_orchestrator.py  test_orchestrator_live_meta.py  test_params.py  test_rich_terminal.py  test_runtime.py  test_server.py  test_session.py  test_session_service.py  test_stop_lifecycle.py  test_types.py
(+39 files in other folders)
